<resources>
    <string name="app_name">SolDeveloInterview</string>
    <string name="clear">Clear</string>
    <string name="experienced_in_programming">Experienced in programming</string>
    <string name="accept">Accept</string>
    <string name="first_name_should_be_displayed_here">First name should be displayed here</string>
    <string name="last_name_should_be_displayed_here">Last name should be displayed here</string>
    <string name="age_should_be_displayed_here">Age should be displayed here</string>
    <string name="experienced_yes_no_should_be_displayed_here">Experienced: Yes/No should be displayed here</string>
    <string name="first_name">\Name: \</string>
    <string name="last_name">\Last Name: \</string>
    <string name="age">\Age: \</string>
    <string name="checkbox_result">\Experienced: \</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
</resources>